# agx_motor_sdk

./: .gitignore  API.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  package.xml  protocol_fetch.py  pyproject.toml  rm_tmp.sh  setup.py
agx_motor_sdk/: __init__.py  version.py
agx_motor_sdk/can/: __init__.py  backend.py  comm_factory.py  python_can.py  socket_can.py
agx_motor_sdk/can/can_sys_utils/: __init__.py  base_util.py  linux_util.py
agx_motor_sdk/can/core/: can_comm_base.py  comm_abstract.py  comm_interface.py
agx_motor_sdk/motor/: __init__.py  _protocol_common.py  arm_driver.py  chassis_driver.py
bindings/python/: CMakeLists.txt  module.cpp
cmake/: agx_motor_sdkConfig.cmake.in  fetch_protocol_libs.cmake
examples/arm/: disable.py  enable.py  get_high_speed.py  get_low_speed.py  go_zero.py
examples/chassis/: disable.py  enable.py  get_high_speed.py  get_low_speed.py  set_rpm.py
include/agx_motor_sdk/can/: can_port.hpp  socket_can.hpp
include/agx_motor_sdk/motor/: arm_driver.hpp  chassis_driver.hpp  protocol_api.h  protocol_loader.hpp  types.hpp
sample/: CMakeLists.txt  arm_disable_demo.cpp  arm_enable_demo.cpp  arm_get_high_speed_demo.cpp  arm_get_low_speed_demo.cpp  arm_go_zero_demo.cpp  chassis_disable_demo.cpp  chassis_enable_demo.cpp  chassis_get_high_speed_demo.cpp  chassis_get_low_speed_demo.cpp  chassis_set_rpm_demo.cpp  demo_utils.hpp
scripts/: can_muti_activate.sh  can_up_1m.sh  can_up_500k.sh
src/can/: can_port.cpp  socket_can.cpp
src/motor/: arm_driver.cpp  chassis_driver.cpp  protocol_loader.cpp
