<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agx_motor_sdk</name>
  <version>1.1.0</version>
  <description>AgileX motor driver SDK (arm and chassis protocols over CAN)</description>

  <author>kehuanjack</author>
  <maintainer email="contact@agilex.ai">Agilex Robotics</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>asio</build_depend>
  <build_depend>ament_cmake_python</build_depend>
  <build_depend>python3-dev</build_depend>
  <build_depend>pybind11-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
